# universe-core

./: .gitignore  code-review.agent.md  config.example.yml  config.yml  pyproject.toml  test_type_resolution.py
docs/quickstart/: agent.md  object.md  universe_cli.md
src/: registry.toml
src/universe/: __init__.py
src/universe/cli/: __init__.py  main.py  module.py  registry.py
src/universe/core/: config.py  singleton.py  timing.py
src/universe/core/agent/: __init__.py  agent.py  attention.py  mindset.py  role.py  soul.py
src/universe/core/linter/: circular_dependency.py  remove_eol_whitespaces.py
src/universe/core/llm_client/: __init__.py  budget.py  embedding_models.py  llm_cache.py  llm_client.py  llm_logger.py  tool_call_fixer.py  validator.py
src/universe/core/meta/: generics_.py  singleton.py
src/universe/core/object_/: __init__.py  object_.py  serializable.py  state.py
src/universe/core/translate/: __init__.py  en.py
src/universe/core/universe/: __init__.py  universe.py  world.py
tests/: __init__.py  conftest.py  test_llm_client.py  test_object.py  test_simulation.py
