[project]
name = "universe-core"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yuyao Huang (Sam)", email = "huangyuyao@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "hjson>=3.1.0",
    "jieba>=0.42.1",
    "openai>=2.32.0",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
    "tiktoken>=0.12.0",
]

[project.scripts]
universe = "universe:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/universe"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20260408",
]
